[package]
name = "falls"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "0.6.1"
bevy-web-resizer = "1.0.0"
bevy_prototype_lyon = "0.4.0"
heron = { version = "2.4.1", features = ["2d"] }
rand = "0.8.5"

# WASMの場合にどれか指定する必要がある？？
#
# rand = { version = "0.8.4", features = [ "wasm-bindgen" ] }
# getrandom = { version = "0.2.4", features = [ "js" ] }
# getrandom = { version = "0.2.4", features = [ "wasm-bindgen" ] }