[package]
name = "falls"
version = "0.4.0"
edition = "2021"

[dependencies]
bevy = "0.8"
bevy-web-resizer = "3.0.0"
heron = { version = "4.0.0", features = ["2d"] }
rand = "0.8.5"

# WASMの場合にどれか指定する必要がある？？
#
# rand = { version = "0.8.4", features = [ "wasm-bindgen" ] }
# getrandom = { version = "0.2.4", features = [ "js" ] }
# getrandom = { version = "0.2.4", features = [ "wasm-bindgen" ] }